# contrib-ipgp

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/ew2sc/: CMakeLists.txt  README  ew2sc.cpp  ew2sc.h  main.cpp
apps/ew2sc/descriptions/: ew2sc3.rst  ew2sc3.xml
plugins/locator/hypo71/: README  hypo71.cpp  hypo71.h
plugins/locator/hypo71/config/: hypo71.cfg
plugins/locator/hypo71/config/hypo71/profiles/: default.hypo71.conf  profile.a.conf  profile.tectonic.conf  profile.volcanic.conf
plugins/locator/hypo71/descriptions/: global_hypo71.rst  global_hypo71.xml
plugins/magnitudes/md/: l4c1hz.cpp  l4c1hz.h  md.cpp  md.h
plugins/magnitudes/md/config/: md.cfg
plugins/magnitudes/md/descriptions/: global_md.xml
