SET(EW2SC_TARGET ew2sc)

SET(
	EW2SC_SOURCES
		main.cpp
		ew2sc.cpp
)


SET(
	EW2SC_HEADERS
		ew2sc.h
		config.h
)

INCLUDE_DIRECTORIES(.)

SC_ADD_EXECUTABLE(EW2SC ${EW2SC_TARGET})
SC_LINK_LIBRARIES_INTERNAL(${EW2SC_TARGET} client)

SC_INSTALL_INIT(${EW2SC_TARGET} ${INIT_TEMPLATE})

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
